# paper_online

./: .dockerignore  .env.example  .gitignore  ChangeLog.md  Dockerfile  README.md  README_en.md  README_zh.md  changelog.md  config.yaml.example  develop.md  docker-compose.yml  nips_2025.py  pyproject.toml
backend/: .env.example  analysis_context.py  app.py  arxiv.py  auth.py  background_tasks.py  chat.py  code_availability.py  config.py  database.py  feishu.py  hf_daily.py  llm.py  markdown_utils.py  migrations.py  prompt.py  utils.py
crawler/: README.md  __init__.py  openreview_crawler.py
crawler/configs/: iclr_2026.yaml  icml_2025.yaml  neurips_2025.yaml
db/migrations/: 001_init.sql  002_search.sql  003_auth_presence.sql  004_invitation_codes.sql  005_hf_daily_papers.sql  006_feishu_notifications.sql  014_arxiv_papers.sql  (+8 more)
frontend/: index.html
frontend-react/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: README.md  apply_migrations.py  build_chi_2026_jsonl.py  build_cvpr_2026_jsonl.py  config_value.py  docker_compose.py  export_supabase.sh  import_papers.py  migrate_db.sql  restore_supabase_dump.sh  run_server.py  test_code_availability_prompt.py
tests/: test_admin_background_tasks.py  test_admin_users.py  test_analysis_context.py  test_arxiv.py  test_build_chi_2026_jsonl.py  test_build_cvpr_2026_jsonl.py  test_code_availability.py  test_feishu.py  test_hf_daily.py  test_llm_management.py  test_llm_streaming.py  test_llm_token_usage_metrics.py  test_markdown_utils.py  test_paper_content_cache.py  test_prompt.py
(+45 files in other folders)
